--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ nav {
     background-color: #055160;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    position: sticky;
+    top: 0;
 }
 
 .color-white {
@@ -37,12 +39,27 @@ nav {
 }
 
 .line-bf-star {
-    height: 2px;
+    height: 4px;
     width: 100%;
     background-color: white;
 }
 
 .star-container {
-    width: 60%;
+    width: 70%;
     min-width: 30px;
+    max-width: 40px;
+}
+
+.portfolio {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.portfolio .line-bf-star {
+    background-color: black;
+}
+
+.portfolio-card .img-container img {
+    width: 100%;
+    border-radius: 10px;
 }
