--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ nav {
     background-color: black;
 }
 
+.contact .line-bf-star {
+    background-color: black;
+}
+
 .portfolio-card .img-container img {
     width: 100%;
     border-radius: 10px;
@@ -86,4 +90,10 @@ nav {
     width: 25px;
     display: inline-block;
     float: left;
+}
+
+.border-bottom {
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid #ced4da;
 }
