--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,11 @@ nav {
 .portfolio-card .img-container img {
     width: 100%;
     border-radius: 10px;
+    transition-duration: .3s;
+}
+
+.portfolio-card:hover .img-container img {
+    transform: scale(1.1);
 }
 
 .text-center {
